# mandelbrot_viewer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  camera.cpp  camera.h  intrusive_list.h  main.cpp  mandelbrot-NH5pml30.sln  mandelbrot-NH5pml30.vcxproj  mandelbrot-NH5pml30.vcxproj.filters  mandelbrot_settings_dialog.cpp  mandelbrot_settings_dialog.h  mandelbrot_settings_dialog.ui  mandelbrot_viewer.cpp  mandelbrot_viewer.h  mandelbrot_viewer.qrc  mandelbrot_viewer.ui  mapper_enterprise.cpp  mapper_enterprise.h  mapper_widget.cpp  mapper_widget.h  mapper_widget.ui  superpixel.h  task_queue.h
